# lembas

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  Lembas Plugins.session.sql  README.md  app.go  go.mod  go.sum  main.go  plugins.json  settings.go  wails.json
.github/: FUNDING.yml
.github/workflows/: testing.yml
frontend/: index.html  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.html  style.css
frontend/src/components/: ProgressBar.svelte  Progressbar.svelte
frontend/src/lib/: plugin.ts  store.ts
frontend/src/lib/components/catalog/: PluginRow.svelte
frontend/src/lib/entities/: localPlugin.ts  plugin.ts  settings.ts
frontend/src/lib/models/: localPlugin.ts  remotePlugin.ts
frontend/src/lib/state/: pluginRelationship.ts
frontend/src/lib/wailsjs/go/: models.ts
frontend/src/pages/: Plugins.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  PluginRow.svelte  interactions.spec.ts  interactions.ts  localPlugin.ts
frontend/src/routes/about/: +page.svelte
frontend/src/routes/catalog/: +page.svelte  +page.ts  remotePluginCollection.ts
frontend/src/routes/settings/: +page.svelte
internal/: datastore.go  datastore_test.go  downloader.go  downloader_test.go  executor.go  parser.go  parser_test.go
internal/entities/: plugin.go  remotePlugin.go
internal/models/: datastore.go  datastore_test.go  helpers.go  installedPlugin.go  localPlugin.go  localPlugin_test.go  remotePlugin.go  remotePlugin_test.go
internal/processes/: processes.go  processes_test.go
internal/settings/: settings.go  settings_test.go
resources/windows/: res.rc
samples/: plugins.json
src/: lib.rs  main.rs
src/core/: api_connector.rs  blacklist.rs  config.rs  downloader.rs  installer.rs  lotro_compendium.rs  mod.rs  plugin.rs  plugin_data_class.rs  plugin_parser.rs  synchronizer.rs
src/core/api/: feed_downloader.rs  mod.rs
src/core/io/: api_connector.rs  cache.rs  compendium_parser.rs  feed_url_parser.rs  file_comparer.rs  mod.rs  plugin_collector.rs  plugin_parser.rs  synchronizer.rs
src/core/parsers/: compendium_parser.rs  mod.rs  plugin_parser.rs
src/gui/: assets.rs  main_window.rs  mod.rs  style.rs
src/gui/elements/: action_panel.rs  control_panel.rs  mod.rs  navigation_panel.rs  plugin_panel.rs  row.rs
src/gui/views/: about.rs  catalog.rs  configuration.rs  default.rs  mod.rs  plugins.rs
test/samples/plugincompendium_files/: altholic.plugincompendium  bevyobars.plugincompendium  calcstats.plugincompendium
tests/: fixtures.rs  mod.rs
tests/integration/: cache.rs  mod.rs  test_cache.rs  test_installer.rs
tests/samples/Homeopatix/: Animalerie.plugin  Animalerie.plugincompendium  BurglarHelper.plugin  BurglarHelper.plugincompendium
tests/samples/Homeopatix/Animalerie/: Commands.lua  FCT.lua  Globals.lua  Librarys.lua  LoadAndSave.lua  Main.lua  MainWindow.lua  MinimizedIcon.lua  VindarPatch.lua
tests/samples/Homeopatix/BurglarHelper/: Commands.lua  FCT.lua  Globals.lua  Librarys.lua  LoadAndSave.lua  Main.lua  MainWindow.lua  MinimizedIcon.lua  Notification.lua
tests/samples/plugin_folders/Atheisto/: CraftTimer.plugin
tests/samples/plugin_folders/Bunny/: AltWallet.plugin
tests/samples/plugin_folders/HabnaPlugins/: HugeBag.plugin  HugeBag.plugincompendium  HugeBagReloader.plugin  HugeBagUnloader.plugin  HugeBagUtility.plugin  TitanBar.plugin  TitanBarReloader.plugin  TitanBarUnloader.plugin
tests/samples/plugin_folders/Homeopatix/: Animalerie.plugin  Animalerie.plugincompendium  BurglarHelper.plugin  BurglarHelper.plugincompendium  Voyage.plugin  Voyage.plugincompendium
tests/samples/xml_files/: Animalerie.plugincompendium  Compendium.plugincompendium  PreciseCoords.plugin  TitanBar.plugin  TitanBar.plugincompendium  Waypoint.plugincompendium  feed_url.xml
(+241 files in other folders)
