#cargo-features = ["strip"]

[package]
name = "lembas"
version = "0.0.1"
authors = ["Marius Wilms <info@mariuswilms.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mawilms/lembas"
description = """
For now this crate is only here for name reservation.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "^0", features = ["glow"] }
reqwest = { version = "^0", features = ["blocking", "json"] }
zip = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dirs = "^3"
rusqlite = { version = "^0", features = ["bundled"] }
futures = "^0"
lazy_static = "^1"
tokio = { version = "^1", features = ["full"]}
image = "^0"
webbrowser = "^0"
fs_extra = "^1"

[dev-dependencies]
mockall = "^0"

[profile.release]
opt-level = "s"
lto = true
# strip = "symbols" Currently only useable for nightly --> 