#cargo-features = ["strip"]

[package]
name = "lembas"
version = "0.3.1"
authors = ["Marius Wilms <info@mariuswilms.dev>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/mawilms/lembas"
description = """
Lembas is an easy to use plugin manager for the MMORPG Lord of the Rings Online.
"""
categories = ["gaming", "plugins", "iced"]
keywords = ["gaming", "plugins", "lotro"]
exclude = [
    "screenshots/*",
    "samples/*",
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "^0", features = ["glow", "tokio"] }
reqwest = { version = "^0", features = ["blocking", "json"] }
zip = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde-xml-rs = "^0"
dirs = "^3"
rusqlite = { version = "^0", features = ["bundled"] }
futures = "^0"
tokio = { version = "^1", features = ["full"]}
image = "^0"
webbrowser = "^0"
fs_extra = "^1"
globset = "^0"
chrono = "^0"
log = { version = "^0", features = ["max_level_debug", "release_max_level_off"] }
env_logger = "^0"
uuid = { version = "^0", features = ["v4"] }
walkdir = "^2"
regex = "^1"
itertools = "^0"

[dev-dependencies]
mockall = "^0"
mockall_double = "^0"

[build-dependencies]
embed-resource = "^1"

[target.'cfg(windows)'.dependencies]
winapi = "^0"

[profile.release]
opt-level = "s"
lto = true
#strip = "symbols"# Currently only useable for nightly --> 
codegen-units = 1