[package]
name = "lembas"
version = "0.4"
authors = ["Marius Wilms <info@mariuswilms.dev>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/mawilms/lembas"
description = """
Lembas is an easy to use plugin manager for the MMORPG Lord of the Rings Online.
"""
categories = ["gaming", "plugins", "iced"]
keywords = ["gaming", "plugins", "lotro"]
exclude = [
    "screenshots/*",
    "samples/*",
    "tests/*",
]

[dependencies]
iced = { version = "^0", features = ["tokio", "image", "pure", "wgpu"] }
reqwest = { version = "^0", features = ["blocking", "json"] }
bytes = "^1"
zip = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde-xml-rs = "^0"
dirs = "^4"
rusqlite = { version = "^0", features = ["bundled"] }
r2d2 = "^0"
r2d2_sqlite = "^0"
futures = "^0"
tokio = { version = "^1", features = ["full"]}
image = "^0"
webbrowser = "^0"
fs_extra = "^1"
globset = "^0"
chrono = "^0"
log = { version = "^0", features = ["max_level_debug", "release_max_level_off"] }
env_logger = "^0"
uuid = { version = "^1", features = ["v4"] }
walkdir = "^2"
regex = "^1"
itertools = "^0"
async-trait = "^0"

[build-dependencies]
embed-resource = "^1"

[target.'cfg(windows)'.dependencies]
winapi = "^0"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
codegen-units = 1